fixing issues with gaps (#14)
* footer development

footer commit

* footer-BEMfix

fixed footer styles names

* footer-variables-fix

created a variables.scss file

* footer-corestyles-fix

created a new folder in styles for footer styles

* footer-container-div-fix

deleted container class and div

* footer-svgtopng-fix

changed all svg files to png files and created a folder media in footer styles folder

* Formatting fixes

* footer-div-and-formatting-fix

* footer-classnames-closingdiv-corestyles-fix

* fixes issues

---------

--- a/public/styles/coreStyles/style.scss
+++ b/public/styles/coreStyles/style.scss
@@ -4,7 +4,6 @@
     width: 100%;
     min-height: 100vh;
     display: flex;
-    gap: 15px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
